# django-node-assets

./: .gitignore  .isort.cfg  .travis.yml  CHANGELOG.rst  LICENSE.txt  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: code_quality_check.yml
django_node_assets/: finders.py
django_node_assets/management/commands/: npminstall.py
